Release v1.7.2 :: Mixed final properties